0026453: NCollection_StlIterator - declare reference getters as const